--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,9 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="Responsive website to manage credit card applications and signup bonus status" />
+  <meta name="image" property="og:image" content="https://i.imgur.com/eG3YVfn.png">
+  <meta name="author" content="Swaroop Uprety">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
