update meta cc logo

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Responsive website to manage credit card applications and signup bonus status" />
-  <meta name="image" property="og:image" content="https://i.imgur.com/eG3YVfn.png">
+  <meta name="image" property="og:image" content="https://i.imgur.com/9GiwUPF.png">
   <meta name="author" content="Swaroop Uprety">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
