--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/cc-icon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
+  <meta name="theme-color" content="#0080ff" />
   <meta name="description" content="Responsive website to manage credit card applications and signup bonus status" />
   <meta name="image" property="og:image" content="%PUBLIC_URL%/cc-meta-logo.png">
   <meta name="author" content="Swaroop Uprety">
