update app logo

--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/cc-icon.png" />
+  <link rel="icon" href="%PUBLIC_URL%/cc-tracker-new-logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#6b58e5" />
   <meta name="description" content="Responsive website to manage credit card applications and signup bonus status" />
-  <meta name="image" property="og:image" content="%PUBLIC_URL%/cc-meta-logo.png">
+  <meta name="image" property="og:image" content="%PUBLIC_URL%/cc-tracker-new-logo.png">
   <meta name="author" content="Swaroop Uprety">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
