--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Responsive website to manage credit card applications and signup bonus status" />
   <meta name="image" property="og:image" content="%PUBLIC_URL%/cc-tracker-new-logo.png">
   <meta name="author" content="Swaroop Uprety">
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/cc-tracker-new-logo.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
