add apple web app title

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
   <meta name="description" content="Responsive website to manage credit card applications and signup bonus status" />
   <meta name="image" property="og:image" content="%PUBLIC_URL%/cc-tracker-new-logo.png">
   <meta name="author" content="Swaroop Uprety">
+  <meta name="apple-mobile-web-app-title" content="CC Manager">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/cc-tracker-new-logo.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
